--- a/test.html
+++ b/test.html
@@ -20,11 +20,8 @@
                     q1.style.border = '1px solid red';
                 }
             }
-        </script>
 
-<script>
-
-    function Check() {
+            function Check() {
         let q2 = document.getElementById('q2');
         let a2 = document.getElementById('a2');
         if (a2.value == '4') {
@@ -34,8 +31,8 @@
             q2.style.border = '1px solid red';
         }
     }
-</script>
-    
+        </script>
+
     </body>
 
     <body>
@@ -49,10 +46,10 @@
             </td>
         </tr>
         <tr>
-            <td class="variant">1) www</td>
-            <td class="variant">2) ftp</td>
-            <td class="variant">3) http</td>
-            <td class="variant">4) html</td>
+            <td class="variant">1) ww</td>
+            <td class="variant">2) ft</td>
+            <td class="variant">3) htt</td>
+            <td class="variant">4) htm</td>
         </tr>
         <tr>
             <td colspan="5">
@@ -62,36 +59,32 @@
     </table>
     <button onclick="Check()">Проверить</button>
 
-
-    <p>Разработчики:
-        Черников Антон
-    </p>
-
     </body>
 
-    <body></body>
-        <h1>Тест по информатике</h1>
-    <table border="1" id="q2">
-        <tr>
-            <td rowspan="3">1</td>
-            <td colspan="4" class="task">
-                Идентификатор некоторого ресурса сети Интернет имеет следующий вид: http://www.ftp.ru/index.html
-                Какая часть этого идентификатора указывает на протокол, используемый для передачи ресурса?
-            </td>
-        </tr>
-        <tr>
-            <td class="variant">1) www</td>
-            <td class="variant">2) ftp</td>
-            <td class="variant">3) http</td>
-            <td class="variant">4) html</td>
-        </tr>
-        <tr>
-            <td colspan="5">
-                <input id="a2" type="text" class="answer" placeholder="Ответ" />
-            </td>
-        </tr>
-    </table>
-    <button onclick="Check()">Проверить</button>
+    <body>
+        <table border="1" id="q2">
+            <tr>
+                <td rowspan="3">2</td>
+                <td colspan="4" class="task">
+                    Идентификатор некоторого ресурса сети Интернет имеет следующий вид: http://www.ftp.ru/index.html
+                    Какая часть этого идентификатора указывает на протокол, используемый для передачи ресурса?
+                </td>
+            </tr>
+            <tr>
+                <td class="variant">1) www</td>
+                <td class="variant">2) ftp</td>
+                <td class="variant">3) http</td>
+                <td class="variant">4) html</td>
+            </tr>
+            <tr>
+                <td colspan="5">
+                    <input id="a2" type="text" class="answer" placeholder="Ответ" />
+                </td>
+            </tr>
+        </table>
+        <button onclick="Check()">Проверить</button>
+    </body>
+
 
 
     <p>Разработчики:
