--- a/test.html
+++ b/test.html
@@ -8,34 +8,6 @@
     </head>
 
     <body>
-        <script>
-
-            function Check() {
-                let q1 = document.getElementById('q1');
-                let a1 = document.getElementById('a1');
-                if (a1.value == '3') {
-                    q1.style.border = '1px solid green ';
-                }
-                else {
-                    q1.style.border = '1px solid red';
-                }
-            }
-
-            function Check() {
-        let q2 = document.getElementById('q2');
-        let a2 = document.getElementById('a2');
-        if (a2.value == '4') {
-            q2.style.border = '1px solid green ';
-        }
-        else {
-            q2.style.border = '1px solid red';
-        }
-    }
-        </script>
-
-    </body>
-
-    <body>
         <h1>Тест по информатике</h1>
     <table border="1" id="q1">
         <tr>
@@ -46,10 +18,10 @@
             </td>
         </tr>
         <tr>
-            <td class="variant">1) ww</td>
-            <td class="variant">2) ft</td>
-            <td class="variant">3) htt</td>
-            <td class="variant">4) htm</td>
+            <td class="variant">1) www</td>
+            <td class="variant">2) ftp</td>
+            <td class="variant">3) http</td>
+            <td class="variant">4) html</td>
         </tr>
         <tr>
             <td colspan="5">
@@ -57,7 +29,7 @@
             </td>
         </tr>
     </table>
-    <button onclick="Check()">Проверить</button>
+    <button onclick="Checkq1()">Проверить</button>
 
     </body>
 
@@ -66,15 +38,14 @@
             <tr>
                 <td rowspan="3">2</td>
                 <td colspan="4" class="task">
-                    Идентификатор некоторого ресурса сети Интернет имеет следующий вид: http://www.ftp.ru/index.html
-                    Какая часть этого идентификатора указывает на протокол, используемый для передачи ресурса?
+                    Коля записал IP-адрес на листочках, но они перемешались и они помечены буквами. Помогите Коле восстановить IP адрес. В ответ запишите последовательность букв, в порядке, соответсвующему IP-адресу.
                 </td>
             </tr>
             <tr>
-                <td class="variant">1) www</td>
-                <td class="variant">2) ftp</td>
-                <td class="variant">3) http</td>
-                <td class="variant">4) html</td>
+                <td class="variant">1) 5.20 (А)</td>
+                <td class="variant">2) 12 (Б)</td>
+                <td class="variant">3) .71 (В)</td>
+                <td class="variant">4) 8.212 (Г)</td>
             </tr>
             <tr>
                 <td colspan="5">
@@ -82,14 +53,156 @@
                 </td>
             </tr>
         </table>
-        <button onclick="Check()">Проверить</button>
+        <button onclick="Checkq2()">Проверить</button>
     </body>
 
+    <body>
+        <table border="1" id="q3">
+            <tr>
+                <td rowspan="3">3</td>
+                <td colspan="4" class="task">
+                    Маской подсети называется 32-разрядное дво‐
+ичное число, которое определяет, какая часть IP-адреса компьютера
+являются общими для всей подсети- в этих разрядах маски стоит 1. Обычно маски записываются в виде четвёрки десятичных чисел- по тем же правилам, что и IP-адреса. Для некоторой подсети используется маска 255.255.248.0. Сколько различных адресов компьютеров допускает эта маска? Введите номер правильного ответа.
 
+            </tr>
+            <tr>
+                <td class="variant">1) 1024</td>
+                <td class="variant">2) 2046</td>
+                <td class="variant">3) 1964</td>
+                <td class="variant">4) 980</td>
+            </tr>
+            <tr>
+                <td colspan="5">
+                    <input id="a3" type="text" class="answer" placeholder="Ответ" />
+                </td>
+            </tr>
+        </table>
+        <button onclick="Checkq3()">Проверить</button>
+    </body>
+        
+    <body>
+        <table border="1" id="q4">
+            <tr>
+                <td rowspan="3">4</td>
+                <td colspan="8" class="task">
+                    По заданным ІР-адресу узла и маске определите адрес сети.
+ІР-адрес узла: 220.125.134.215
+Маска: 255.255.240.0
+Запишите ответ как последовательность буквенных обозначений элементов IP-адреса со- гласно таблице (без учёта точек).
+
+            </tr>
+            <tr>
+                <td class="variant">1) A 0</td>
+                <td class="variant">2) B 128</td>
+                <td class="variant">3) C 134</td>
+                <td class="variant">4) D 215</td>
+                <td class="variant">1) E 220</td>
+                <td class="variant">2) F 125</td>
+                <td class="variant">3) G 240</td>
+                <td class="variant">4) H 255</td>
+            </tr>
+            <tr>
+                <td colspan="8">
+                    <input id="a4" type="text" class="answer" placeholder="Ответ" />
+                </td>
+            </tr>
+        </table>
+        <button onclick="Checkq4()">Проверить</button>
+    </body>
+
+    <body>
+        <table border="1" id="q5">
+            <tr>
+                <td rowspan="3">5</td>
+                <td colspan="8" class="task">
+                    По заданным ІР-адресу узла и маске определите адрес сети.
+ІР-адрес узла: 61.161.220.187
+Маска: 255.255.255.224
+Запишите ответ как последовательность буквенных обозначений элементов ІР-адреса со- гласно таблице (без учёта точек).
+
+            </tr>
+            <tr>
+                <td class="variant">1) A 0</td>
+                <td class="variant">2) B 61</td>
+                <td class="variant">3) C 160</td>
+                <td class="variant">4) D 187</td>
+                <td class="variant">1) E 224</td>
+                <td class="variant">2) F 220</td>
+                <td class="variant">3) G 161</td>
+                <td class="variant">4) H 255</td>
+            </tr>
+            <tr>
+                <td colspan="8">
+                    <input id="a5" type="text" class="answer" placeholder="Ответ" />
+                </td>
+            </tr>
+        </table>
+        <button onclick="Checkq5()">Проверить</button>
+    </body>
 
     <p>Разработчики:
         Черников Антон
     </p>
 
-    </body>
+
+        <script>
+
+            function Checkq1() {
+                let q1 = document.getElementById('q1');
+                let a1 = document.getElementById('a1');
+                if (a1.value == '3') {
+                    q1.style.border = '1px solid green ';
+                }
+                else {
+                    q1.style.border = '1px solid red';
+                }
+            }
+
+            function Checkq2() {
+        let q2 = document.getElementById('q2');
+        let a2 = document.getElementById('a2');
+        if (a2.value == 'БАГВ') {
+            q2.style.border = '1px solid green ';
+        }
+        else {
+            q2.style.border = '1px solid red';
+        }
+    }
+
+    function Checkq3() {
+        let q3 = document.getElementById('q3');
+        let a3 = document.getElementById('a3');
+        if (a3.value == '2') {
+            q3.style.border = '1px solid green ';
+        }
+        else {
+            q3.style.border = '1px solid red';
+        }
+    }
+
+    function Checkq4() {
+        let q4 = document.getElementById('q4');
+        let a4 = document.getElementById('a4');
+        if (a4.value == 'EFBA') {
+            q4.style.border = '1px solid green ';
+        }
+        else {
+            q4.style.border = '1px solid red';
+        }
+    }
+
+    function Checkq5() {
+        let q5 = document.getElementById('q5');
+        let a5 = document.getElementById('a5');
+        if (a5.value == 'BGFC') {
+            q5.style.border = '1px solid green ';
+        }
+        else {
+            q5.style.border = '1px solid red';
+        }
+    }
+        </script>
+
+
     </html>
